Add the use of the server ID to the router
